Fix where project list would get hidden behind a div

--- a/css/styles.css
+++ b/css/styles.css
@@ -236,7 +236,7 @@ Projects
 }
 
 .menu {
-	padding: 50px 0 100px 15%;
+	padding: 50px 0 100px 0%;
 }
 
 .menu ul {
@@ -260,6 +260,10 @@ Projects
 	min-width: 330px;
 	height: 700px;
 	display: inline-block;
+}
+
+#card {
+	margin-left: 300px;
 }
 
 #project-nav {
@@ -677,11 +681,15 @@ External Links
 
 @media (max-width:1800px) {
 	.menu {
-		padding: 50px 0 300px 5%;
+		padding: 50px 0 300px 0%;
 	}
 
 	.image-section img {
 		width: 600px;
+	}
+
+	#card {
+		margin-left: 200px;
 	}
 }
 
@@ -752,6 +760,10 @@ External Links
 	.image-section {
 		text-align: center;
 	}
+
+	#card {
+		margin-left: 50px;
+	}
 }
 
 @media (max-width:1130px) {
@@ -795,6 +807,10 @@ External Links
 
 	.menu {
 		padding: 50px 0 300px 0%;
+	}
+
+	#card {
+		margin-left: 0;
 	}
 }
 
@@ -933,8 +949,12 @@ External Links
 
 	.menu div {
 		width: 100%;
-		margin-left: -15px;
 		height: 80vh;
+		margin-left: -15px;
+	}
+
+	#card {
+		margin-left: -15px;
 	}
 
 	.timeline-title {
